--- a/ckpt/tacotron2.v1.yaml
+++ b/ckpt/tacotron2.v1.yaml
@@ -13,6 +13,8 @@ format: "npy"
 ###########################################################
 #              NETWORK ARCHITECTURE SETTING               #
 ###########################################################
+model_type: "tacotron2"
+
 tacotron2_params:
     embedding_hidden_size: 512
     initializer_range: 0.02
@@ -49,7 +51,7 @@ remove_short_samples: true # Whether to remove samples the length of which are l
 allow_cache: true          # Whether to allow cache in dataset. If true, it requires cpu memory.
 mel_length_threshold: 32   # remove all targets has mel_length <= 32 
 is_shuffle: true           # shuffle dataset after each epoch.
-use_fixed_shapes: true     # use_fixed_shapes for training (2x speed-up)
+use_fixed_shapes: false    # use_fixed_shapes for training (2x speed-up)
                            # refer (https://github.com/dathudeptrai/TensorflowTTS/issues/34#issuecomment-642309118)
 
 ###########################################################
@@ -61,16 +63,15 @@ optimizer_params:
     decay_steps: 10000          # < train_max_steps is recommend.
     warmup_proportion: 0.02
     weight_decay: 0.001
-    
-    
+
 ###########################################################
 #                    INTERVAL SETTING                     #
 ###########################################################
 train_max_steps: 40000                 # Number of training steps.
-save_interval_steps: 500               # Interval steps to save checkpoint.
-eval_interval_steps: 500                # Interval steps to evaluate the network.
-log_interval_steps: 200                 # Interval steps to record the training log.
-start_schedule_teacher_forcing: 200001  # don't need to apply schedule teacher forcing.
+save_interval_steps: 250               # Interval steps to save checkpoint.
+eval_interval_steps: 250                # Interval steps to evaluate the network.
+log_interval_steps: 125                 # Interval steps to record the training log.
+start_schedule_teacher_forcing: 40001  # don't need to apply schedule teacher forcing.
 start_ratio_value: 0.5                  # start ratio of scheduled teacher forcing.
 schedule_decay_steps: 50000             # decay step scheduled teacher forcing.
 end_ratio_value: 0.0                    # end ratio of scheduled teacher forcing.
