--- a/ckpt/tacotron2.v1.yaml
+++ b/ckpt/tacotron2.v1.yaml
@@ -1,14 +1,8 @@
-# This is the hyperparameter configuration file for Tacotron2 v1.
-# Please make sure this is adjusted for the LJSpeech dataset. If you want to
-# apply to the other dataset, you might need to carefully change some parameters.
-# This configuration performs 200k iters but 65k iters is enough to get a good models.
-
 ###########################################################
 #                FEATURE EXTRACTION SETTING               #
 ###########################################################
 hop_size: 256            # Hop size.
 format: "npy"
-
 
 ###########################################################
 #              NETWORK ARCHITECTURE SETTING               #
@@ -16,6 +10,7 @@ format: "npy"
 model_type: "tacotron2"
 
 tacotron2_params:
+    dataset: ljspeech
     embedding_hidden_size: 512
     initializer_range: 0.02
     embedding_dropout_prob: 0.1
@@ -51,7 +46,7 @@ remove_short_samples: true # Whether to remove samples the length of which are l
 allow_cache: true          # Whether to allow cache in dataset. If true, it requires cpu memory.
 mel_length_threshold: 32   # remove all targets has mel_length <= 32 
 is_shuffle: true           # shuffle dataset after each epoch.
-use_fixed_shapes: false    # use_fixed_shapes for training (2x speed-up)
+use_fixed_shapes: true    # use_fixed_shapes for training (2x speed-up)
                            # refer (https://github.com/dathudeptrai/TensorflowTTS/issues/34#issuecomment-642309118)
 
 ###########################################################
@@ -60,7 +55,7 @@ use_fixed_shapes: false    # use_fixed_shapes for training (2x speed-up)
 optimizer_params:
     initial_learning_rate: 0.001
     end_learning_rate: 0.00001
-    decay_steps: 10000          # < train_max_steps is recommend.
+    decay_steps: 5000          # < train_max_steps is recommend.
     warmup_proportion: 0.02
     weight_decay: 0.001
 
